@@ -39,7 +39,7 @@ class TestDSN(unittest.TestCase):
 
         self.scores = self.clf.decision_scores_
         self.metrics = ['JS', 'WS', 'ENG', 'BHT', 'HLL', 'HI', 'LK',
-                        'LP', 'MAH', 'TMT', 'RES', 'KS', 'INT']
+                        'LP', 'MAH', 'TMT', 'RES', 'KS', 'INT', 'MMD']
 
     def test_prediction_labels(self):
 
