@@ -23,3 +23,4 @@ v<0.2.6>, <10/01/2022> -- Updated trained meta-models, added confidence threshol
 v<0.2.7>, <10/02/2022> -- Removed kmeans and shift thresholders
 v<0.2.7>, <10/14/2022> -- Added vae thresholder
 v<0.2.7>, <10/15/2022> -- Added mmd loss and autodim to vae
+v<0.2.7>, <10/29/2022> -- Added mmd metric to DSN
